[gd_scene load_steps=2 format=3 uid="uid://dl4i50quhlru5"]

[ext_resource type="Script" uid="uid://5dlq4wg5v7y5" path="res://scenes/fight_scene/scripts/player_enemy_stats_hud.gd" id="1_imvso"]

[node name="PlayerEnemyStatsHud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1067.0
offset_bottom = -648.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_imvso")

[node name="PlayerStats" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(200, 50)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerStats"]
layout_mode = 2

[node name="BoxerPortrait" type="ColorRect" parent="PlayerStats/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
color = Color(0.769361, 0.169675, 0.882184, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerStats/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BoxerHealthBar" type="ProgressBar" parent="PlayerStats/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
value = 25.0

[node name="BoxerStaminaBar" type="ProgressBar" parent="PlayerStats/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
value = 75.0

[node name="EnemyStats" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(200, 50)
layout_mode = 0
offset_left = 1077.0
offset_top = 2.0
offset_right = 1277.0
offset_bottom = 60.0

[node name="HBoxContainer" type="HBoxContainer" parent="EnemyStats"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="EnemyStats/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EnemyHealthBar" type="ProgressBar" parent="EnemyStats/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
value = 25.0
fill_mode = 1

[node name="EnemyStaminaBar" type="ProgressBar" parent="EnemyStats/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
value = 75.0
fill_mode = 1

[node name="EnemyPortrait" type="ColorRect" parent="EnemyStats/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
color = Color(0.769361, 0.169675, 0.882184, 1)
